--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -1,1 +1,2 @@
+<a class="logo" href="#/">Happy Farmer You!</a>
 <input type="button" value="Login with Facebook" class="login-btn login-btn-facebook" />
