--- a/src/templates/market.hbs
+++ b/src/templates/market.hbs
@@ -1,5 +1,5 @@
 <section>
-    <h3><a href="#/markets/{{_id}}">{{name}}</a></h3>
+    <h3><a href="#/markets/{{id}}">{{name}}</a></h3>
     <span>{{location.city}}</span>
     <span>{{location.state}}</span>
     <span>{{location.street-address}}</span>
