--- a/src/templates/marketDetail.hbs
+++ b/src/templates/marketDetail.hbs
@@ -1,5 +1,5 @@
 <section>
-    <a href="#/markets/{{_id}}/edit">edit</a>
+    <a href="#/markets/{{id}}/edit">edit</a>
     <h1>{{name}}</h1>
     <span>{{location.city}}</span>
     <span>{{location.state}}</span>
