--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -1,2 +1,2 @@
-<a class="logo" href="#/"><img src="/assets/logo.png" />Happy Farmer You!</a>
+<a class="logo" href="#/"><img src="/assets/logo.png" /><div>Happy Farmer You!</div></a>
 <input type="button" value="Login with Facebook" class="login-btn login-btn-facebook" />
