prepare things for delete

--- a/src/templates/marketDetail.hbs
+++ b/src/templates/marketDetail.hbs
@@ -1,7 +1,8 @@
 <section>
     <a href="#/markets/{{id}}/edit">edit</a>
+    <a href="#/markets/{{id}}/delete">delete</a>
     <h1>{{name}}</h1>
-    <span>{{location.city}}</span>
-    <span>{{location.state}}</span>
+    <span>{{location.state}}</span>,
+    <span>{{location.city}}</span>,
     <span>{{location.street-address}}</span>
 </section>
