--- a/src/templates/market.hbs
+++ b/src/templates/market.hbs
@@ -1,6 +1,6 @@
 <section>
     <h3><a href="#/markets/{{id}}">{{name}}</a></h3>
-    <span>{{location.city}}</span>
-    <span>{{location.state}}</span>
+    <span>{{location.state}}</span>,
+    <span>{{location.city}}</span>,
     <span>{{location.street-address}}</span>
 </section>
