--- a/src/templates/farm/farmDetail.hbs
+++ b/src/templates/farm/farmDetail.hbs
@@ -1,6 +1,6 @@
 <section>
-    <a href="#/farms/{{id}}/edit">edit</a>
-    <a href="#/farms/{{id}}/delete">delete</a>
+    <a href="#/farms/edit/{{id}}">edit</a>
+    <a href="#/farms/delete/{{id}}">delete</a>
     <h1>{{name}}</h1>
     <span>{{location.state}}</span>,
     <span>{{location.city}}</span>,
