--- a/src/templates/market/marketDetail.hbs
+++ b/src/templates/market/marketDetail.hbs
@@ -1,6 +1,6 @@
 <section>
-    <a href="#/markets/{{id}}/edit">edit</a>
-    <a href="#/markets/{{id}}/delete">delete</a>
+    <a href="#/markets/edit/{{id}}">edit</a>
+    <a href="#/markets/delete/{{id}}">delete</a>
     <h1>{{name}}</h1>
     <span>{{location.state}}</span>,
     <span>{{location.city}}</span>,
