started with auth functionality

--- a/src/templates/layout/header.hbs
+++ b/src/templates/layout/header.hbs
@@ -1,2 +1,11 @@
-<a class="logo" href="#/"><img src="/assets/logo.png" /><div>Happy Farmer You!</div></a>
-<input type="button" value="Login with Facebook" class="login-btn login-btn-facebook" />
+<a class="logo" href="#/">
+    <img src="/assets/logo.png" />
+    <div>Happy Farmer You!</div>
+</a>
+<form>
+    <input
+        type="button"
+        data-provider="facebook"
+        value="Login with Facebook"
+        class="login-btn login-btn-facebook" />
+</form>
