twitter connect button

--- a/src/templates/layout/header.hbs
+++ b/src/templates/layout/header.hbs
@@ -8,4 +8,9 @@
         data-provider="facebook"
         value="Login with Facebook"
         class="login-btn login-btn-facebook" />
+        <input
+        type="button"
+        data-provider="twitter"
+        value="Login with Twitter"
+        class="login-btn login-btn-twitter" />
 </form>
