placing login with google button

--- a/src/templates/layout/header.hbs
+++ b/src/templates/layout/header.hbs
@@ -8,9 +8,14 @@
         data-provider="facebook"
         value="Login with Facebook"
         class="login-btn login-btn-facebook" />
-        <input
+    <input
         type="button"
         data-provider="twitter"
         value="Login with Twitter"
         class="login-btn login-btn-twitter" />
+    <input
+        type="button"
+        data-provider="google"
+        value="Login with Google"
+        class="login-btn login-btn-google" />
 </form>
