--- a/src/templates/layout/header.hbs
+++ b/src/templates/layout/header.hbs
@@ -1,6 +1,6 @@
 <a class="logo" href="#/">
     <img src="/assets/logo.png" />
-    <div>Happy Farmer You!</div>
+    <div>Happy Farmer Yo!</div>
 </a>
 <form>
     <input
